--- a/Rotating-navigation/style.css
+++ b/Rotating-navigation/style.css
@@ -2,8 +2,10 @@
     box-sizing: border-box;
 }
 body{
-    overflow: hidden;
-    background-color: silver;
+    overflow-x: hidden;
+    background-color: rgb(70, 69, 69);
+    /* height: 100vh; */
+    margin: 0;
 }
 .container{
     width: 100vw;
@@ -11,10 +13,19 @@ body{
     background-color:gainsboro;
     transition: transform 0.4s linear;
     transform-origin: left top;
+    padding: 50px;
 }
-/* .container.show-nav{
+.container.show-nav{
     transform: rotate(-20deg);
-} */
+}
+.container.show-nav .circle{
+    transform: rotate(-70deg);
+}
+/*?*/
+.container.show-nav+nav li{
+    transform: translateX(0);
+    transition-delay:0.3s ;
+}
 .circle-container{
     position: fixed;
     left: -100px;
@@ -39,24 +50,62 @@ body{
     font-size: 25px;
     color: white;
     border: 0;
+    height: 100px;/*?*/
 }
-.content{
-    padding: 70px;
+.circle button:focus{
+    outline: none;
 }
-.circle button.open{
+.circle button#open{
     left: 60%;
-    top: 70%;
+    top: 60%;
 }
-.circle button.close{
-    top: 70%;
-    left: 30%;
-    transform: rotate(-20dec);
+.circle button#close{
+    top: 60%;
+    left: 20%;
+    transform: rotate(90dec);
     transform-origin: left top;
 }
 .content img{
     max-width: 100%;
 }
+.content{
+    max-width: 1000px;
+    margin: 50px auto;
+}
+
 p{
     font-size: 20px;
-    line-height: 1.5em;
+    line-height: 1.5;
+}
+
+
+nav{
+    position: fixed;
+    left: 0;
+    bottom: 40px;
+    z-index: 10;
+}
+nav ul{
+    list-style-type: none;
+}
+nav ul li{
+    font-size: 20px;
+    padding: 5px;
+    text-transform:uppercase ;
+    color: white;
+    margin: 10px 0;
+    transform: translateX(-100%);
+    transition: transform 0.4s ease-in;
+}
+nav ul li i{
+    font-size: 20px;
+    margin-right: 10px;
+}
+nav ul li+li{
+    margin-left: 15px;
+    transform: translateX(-150%);
+}
+nav ul li+li+li{
+    margin-left: 30px;
+    transform: translateX(-200%);
 }
