--- a/progress-step/note.css
+++ b/progress-step/note.css
@@ -49,7 +49,7 @@ body{
 
 /*藍線*/
 .progress{
-    /*50%from the top, */
+    /*50% from the top, */
     position: absolute;
     top: 50%;
     left: 0;
@@ -65,7 +65,8 @@ body{
     height: 50px;
     background-color: cyan;
     border-radius: 50%;
-    border: 3px solid cornflowerblue;
+    border: 3px solid cornflowerblue;/*active時會有邊框*/
+    
     /*設定將1234放在至中的位置*/
     display: flex;
     justify-content: center;
