--- a/split-landing-page/style.css
+++ b/split-landing-page/style.css
@@ -2,29 +2,89 @@
     box-sizing: border-box;
 }
 body{
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    /* width: 100vw; */
+    /*width & height 都要設*/
+    width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    margin: 0;
 }
+p{
+    font-size: 40px;
+    color: white;
+    padding: 5px 10px;
+}
+a{
+    text-decoration: none;
+    font-size: 30px;
+    padding: 5px 10px;
+    border: 3px solid white;
+}
+a:hover{
+    color: cornsilk;
+    background-color:thistle;
+}
+
 .container{
     position: relative;
     width: 100%;
-    height: 100%;
+    height:100%;
 }
-.bg::before{
-    content: "";
-    background-color: azure;
-}
-.bg{
+.bg.left{
     position: absolute;
-    width: 100%;
+    left: 0;
+    background-color: salmon;
+    background: url(img/Taiwan2.jpg);
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    background-position: center;
+    width: 50%;
     height: 100%;
-    background-image: url(img/Taiwan2.jpg);
+    /*當滑鼠滑過左邊時，螢幕慢慢變大*/
+    transition: 0.5s ease;
+}
+.bg.left p{
+    position:absolute;
+    left: 45%;
+    top:40%
+}
+.bg.left a{
+    position:absolute;
+    left: 45%;
+    top:55%
+}
+.bg.right{
+    position: absolute;
+    right: 0;
+    background-image: url(img/Japan.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    
+    width: 50%;
+    height: 100%;
+    /*當滑鼠滑過右邊時，螢幕慢慢變大*/
+    transition: 0.5s ease;
+}
+.bg.right p{
+    position:absolute;
+    left: 45%;
+    top:40%
+}
+.bg.right a{
+    position:absolute;
+    left: 45%;
+    top:55%
+}
+
+
+.container.hover-left .left{
+    width: 75%;
+}
+.container.hover-left .right{
+    width: 25%;
+}
+
+.container.hover-right .right{
+    width: 75%;
+}
+.container.hover-right .left{
+    width: 25%;
 }
