--- a/form-wave-animation/style.css
+++ b/form-wave-animation/style.css
@@ -77,3 +77,13 @@ a{
     /*transform 也是要position:absolute之後才能使用嗎?*/
     transform: translateY(-30px);
 }
+.form-control label span{ 
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+}
+
+.form-control input:focus + label span,
+.form-control input:valid + label span{ 
+    transform:translateY(-30px)
+} 
